--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -65,5 +66,15 @@ body {
   #clear:hover {
     background-color: #c82333;
     box-shadow: 0 4px 8px rgba(220, 53, 69, 0.2);
+  }
+  
+  footer {
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  footer p {
+    color: #777;
+    font-size: 14px;
   }
   
